2014-05-15  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document the new policy about SMPP config
      groups not having both, the 'port' and the 'receive-port'. 
    * gw/smsc/smsc_smpp.c: enforce ONE bind type per 'group = smsc' context.
    This patchset resolves a long standing bug #418, #208, which caused the
    internal state of the connection not to be reflected correctly, if the
    receiver was disconnected and re-connected, the transmitter session may
    still have been indicated as "offline", and hence the route was not
    considered during central routing of the MT messages. Generally we're
    moving away from the concept of having the transmitter and receiver 
    session for SMPP configurable in one group, they need to be defined in
    seperate groups.
    
2014-04-29  Stipe Tolj  <stolj at kannel.org>
    * doc/alligata/alligata.xml, doc/arc/arch.xml, doc/userguide/userguide.xml,
      doc/wtls/wtls.xml: move from DocBook V3.1 to V4.2 and fix various XML
      tag errors. No content change.
    * configure[.in]: we need the xml.dcl to be added to the jade execution
      to have a clean XML tag declaration, since we are in SGML mode here.
    * Makefile.in: add $(XML_DCL) reference to the xml.dcl file.
    This patchsets moves the 'make docs' target to use the DocBook V4.2 DTD
    and schemata in favor of the too old V3.1. It also fixes some slight XML
    tag inconsistancies in the XML structure, but doesn't change any content.
    
2014-04-11 Alexander Malysh <amalysh at kannel.org>
    * gw/smsbox.c, gwlib/gw-timer.[ch]: added callback function to gw-timer

2014-04-03  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_soap_parlayx.c: re-order header includes and remove comment
      block. NLC.
    * soap/env_header.h: add SOAP_ENV__Header struct for Parlay/X modules to
      the abstracted SOAP env library build.
    * soap/Makefile.in: change the SOAP env build and incarnation of wsseapi.[ch]